--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "axios-mock-adapter": "^1.9.0"
-  }
+  "devDependencies": {}
 }
